--- a/eShopSolution/eShopSolution.AdminApp/Views/Category/Details.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Category/Details.cshtml
@@ -3,70 +3,131 @@
 @{
     ViewData["Title"] = "Details";
 }
+<style>
+    .table {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
 
-<h1>Details</h1>
+    .term {
+        width: 20%;
+        display: flex;
+        align-items: center;
+        padding: 8px 8px;
+        background-color: #1d4adf85;
+        color: white;
+        position: relative;
+    }
 
-<div>
-    <h4>CategoryVm</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SeoDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SeoDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SeoTitle)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SeoTitle)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SeoAlias)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SeoAlias)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SortOrder)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SortOrder)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LanguageId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LanguageId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-    </dl>
+        .term::after {
+            content: '';
+            width: 12px;
+            height: 24px;
+            position: absolute;
+            background-color: #1d4adf85;
+            left: 100%;
+            clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+        }
+
+    .desc {
+        width: 80%;
+        background-color: #eee;
+        display: flex;
+        align-items: center;
+        padding: 8px 8px 8px 24px;
+    }
+
+    dd {
+        margin-bottom: 0px;
+    }
+
+
+    /* ******************************* */
+
+    * {
+        box-sizing: border-box;
+        margin: 0;
+    }
+</style>
+
+
+
+<div class="container-fluid">
+    <h1 class="mt-4">Chi tiết danh mục</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+        <li class="breadcrumb-item active">Danh sách danh mục</li>
+
+        <li class="breadcrumb-item active">Chi tiết danh mục</li>
+    </ol>
+    <div class="card mb-4">
+        <div class="card-header">
+            <a class="btn btn-outline-success" asp-action="Index" asp-controller="Category">Về danh sách</a>
+        </div>
+
+        <div class="card-body">
+            <div class="col-md-6 " style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; padding: 10px; border-radius: 10px;width: 692px;">
+
+                <dl class="table m-0">
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.Id)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.Id)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.SeoTitle)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.SeoTitle)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.SeoAlias)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.SeoAlias)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.SeoDescription)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.SeoDescription)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.ParentId)
+                    </dt>
+                    <dd class="desc">
+                        @(Model.ParentId != null ? Model.ParentId.ToString() : "N/A")
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.SortOrder)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.SortOrder)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.Status)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.Status)
+                    </dd>
+                    <dt class="term">
+                        @Html.DisplayNameFor(model => model.LanguageId)
+                    </dt>
+                    <dd class="desc">
+                        @Html.DisplayFor(model => model.LanguageId)
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
-</div>
+
