--- a/eShopSolution/eShopSolution.AdminApp/Views/Order/Detail.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Order/Detail.cshtml
@@ -114,6 +114,7 @@
         display: flex;
         flex-wrap: wrap;
         row-gap: 20px;
+
     }
 
     .term {
@@ -572,7 +573,7 @@ body{background-color:#eee;}
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <div class="container-fluid">
-    <h1 class="mt-4">Chi tiết sản phẩm</h1>
+    <h1 class="mt-4">Chi tiết đơn hàng</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
         <li class="breadcrumb-item">Danh sách đơn hàng</li>
@@ -586,8 +587,10 @@ body{background-color:#eee;}
 
             <div class="container-body mt-4">
                 <div class="row r1">
-                    <div class="col-md-6 " style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; padding: 10px; border-radius: 10px; width: 692px; height:532px;">
-                        <dl class="table">
+                    <div class="col-md-6 " style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; padding: 10px; border-radius: 10px; width: 692px; ">
+                        <dl class="table"  style="
+    padding: 0px; margin:0px;
+">
                             <dt class="term">
                                 @Html.DisplayNameFor(model => model.Id)
                             </dt>
