--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Detail.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Detail.cshtml
@@ -146,6 +146,8 @@
     dd {
         margin-bottom: 0px;
     }
+
+    
     /* ******************************* */
 
     * {
@@ -165,14 +167,14 @@
     </ol>
     <div class="card mb-4">
         <div class="card-header">
-            <a class="btn btn-success" asp-action="Index" asp-controller="Product">Về danh sách</a>
+            <a class="btn btn-outline-success" asp-action="Index" asp-controller="Product">Về danh sách</a>
         </div>
         <div class="card-body">
         
         <div class="container-body mt-4">
             <div class="row r1">
-                    <div class="col-md-6 " style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; padding: 10px; border-radius: 10px">
-                    <dl class="table">
+                    <div class="col-md-6 " style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; padding: 10px; border-radius: 10px;width: 692px;">
+                    <dl class="table m-0">
                         <dt class="term">
                             @Html.DisplayNameFor(model => model.Id)
                         </dt>
