--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Edit.cshtml
@@ -65,7 +65,14 @@
                             <span asp-validation-for="Price" class="text-danger"></span>
 
                         </div>
+                        <div class="row mb-3">
+                            <label asp-for="Stock" class="col-sm-2 col-form-label">Stock</label>
+                            <div class="col-sm-10">
+                                <input asp-for="Stock" type="number" class="form-control">
+                            </div>
+                            <span asp-validation-for="Stock" class="text-danger"></span>
 
+                        </div>
                         <div class="row mb-3">
                             <label asp-for="SeoDescription" class="col-sm-2 col-form-label">SeoDescription</label>
                             <div class="col-sm-10">
@@ -102,7 +109,7 @@
                     <div class="row mb-3">
                         <label asp-for="ThumbnailImage" class="col-sm-2 col-form-label">Image Upload</label>
                         <div class="col-sm-10">
-                            <input asp-for="ThumbnailImage" class="form-control" type="file" id="formFile" required>
+                            <input asp-for="ThumbnailImage" class="form-control" type="file" id="formFile">
                         </div>
                     </div>
                     <div class="form-group">
