--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@using eShopSolution.ViewModels.Catalog.Products
+﻿@using eShopSolution.Utilities.Constants
+@using eShopSolution.ViewModels.Catalog.Products
 @using eShopSolution.ViewModels.Common;
+@using Microsoft.AspNetCore.Http
+
 @model ApiResult<PagedResult<ProductVm>>
 
 @{
@@ -16,14 +19,18 @@
             //const checkbox = document.getElementById('flexSwitchCheckDefault');
             const message = document.getElementById('mess-box');
 
+           
             $(".form-check-input").change(function (event) {
                 // Get the checked value
                 const isChecked = $(this).prop('checked');
                 console.log(isChecked)
                 // Make an AJAX request to the controller
                 const productId = $(this).attr('itemid');
+
                 const url = `https://localhost:5001/api/products/${productId}/${isChecked}`;
-                fetch(url, { method: 'PUT' })
+                fetch(url, {
+                    method: 'PUT'
+                })
                     .then(response => {
                         if (response.ok) {
                             message.innerHTML = ` <div id="msgAlert" class="alert alert-success" role="alert">
@@ -124,7 +131,7 @@
                                 Tên
                             </th>
                             <th scope="col">
-                                Giá nhập
+                                Giá gốc
                             </th>
                             <th scope="col">
                                 Giá bán
@@ -190,6 +197,8 @@
                                         @Html.ActionLink("Xem", "Detail", new { id = item.Id },new {@class = "btn btn-outline-info"})
                                         @Html.ActionLink("Xóa", "Delete", new { id = item.Id }, new {@class = "btn btn-outline-danger"})
                                         @Html.ActionLink("Thêm ảnh", "AddImage", new { id = item.Id }, new {@class = "btn btn-outline-warning"})
+                                        @Html.ActionLink("Xóa ảnh", "DeleteImage", new { id = item.Id }, new {@class = "btn btn-outline-dark"})
+
 
                                    </div>
                                    <div class="mt-2">
