--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/IngredientAssign.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/IngredientAssign.cshtml
@@ -28,7 +28,7 @@
     </script>
 }
 <div class="container-fluid">
-    <h1 class="mt-4">Gán quyền</h1>
+    <h1 class="mt-4">Thêm nguyên liệu</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
         <li class="breadcrumb-item active">Gán danh mục</li>
@@ -39,31 +39,35 @@
         </div>
 
         <div class="card-body">
-                <form asp-action="IngredientAssign">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Id" />
-                @for (var i = 0; i < Model.Ingredients.Count; i++)
-                {
-                    <div class="form-group">
-                        <label>
-                            @Model.Ingredients[i].Name
-                            <input type="checkbox" 
-                                   asp-for="Ingredients[i].Selected" 
-                                   id="checkbox-@Model.Ingredients[i].Id"
-                                   onchange="checkinputEvent(this,`input-@Model.Ingredients[i].Id`)" />
-                            @*<input type="number" 
-                                   asp-for="Ingredients[i].UpdateStock"
-                                   id="input-@Model.Ingredients[i].Id" 
-                                   onclick="checkboxEvent(`checkbox-@Model.Ingredients[i].Id`)" />*@
-                            <input type="hidden" asp-for="Ingredients[i].Id" />
-                            <input type="hidden" asp-for="Ingredients[i].Name" />
-                        </label>
+                <div class="col-md-4">
+
+                    <form asp-action="IngredientAssign">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="row mb-3">
+                            <legend class="col-form-label col-sm-2 pt-0">Select Ingredients</legend>
+                            <div class="col-sm-10">
+
+                                <input type="hidden" asp-for="Id" />
+                            @for (var i = 0; i < Model.Ingredients.Count; i++)
+                            {
+                                <div class="form-check">
+                                    <label class="form-check-label" for="gridCheck1">
+                                        @Model.Ingredients[i].Name
+                                    </label>
+                                    <input class="form-check-input" type="checkbox" id="gridCheck1" asp-for="Ingredients[i].Selected">
+
+                                    <input type="hidden" asp-for="Ingredients[i].Id" />
+                                    <input type="hidden" asp-for="Ingredients[i].Name" />
+                                </div>
+
+                            }
+                        </div>
                     </div>
-                }
-                <div class="form-group">
-                    <input type="submit" value="Lưu lại" class="btn btn-primary" />
-                </div>
-            </form>
+                    <div class="form-group">
+                        <input type="submit" value="Lưu lại" class="btn btn-outline-primary" />
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
