--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
@@ -9,59 +9,86 @@
     <h1 class="mt-4">Tạo mới người dùng</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+        <li class="breadcrumb-item">Người dùng</li>
         <li class="breadcrumb-item active">Tạo mới người dùng</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
-            <a class="btn btn-success" asp-action="Index" asp-controller="User">Về danh sách</a>
+            <a class="btn btn-outline-success" asp-action="Index" asp-controller="User">Về danh sách</a>
         </div>
 
         <div class="card-body">
             <div class="col-md-4">
-                <form asp-action="Create">
+                <form asp-action="Create" enctype="multipart/form-data">
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="FirstName" class="control-label"></label>
-                        <input asp-for="FirstName" class="form-control" />
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="LastName" class="control-label"></label>
-                        <input asp-for="LastName" class="form-control" />
+                    <div class="row mb-3">
+                        <label asp-for="LastName" class="col-sm-2 col-form-label">LastName</label>
+                        <div class="col-sm-10">
+                            <input asp-for="LastName" type="number" class="form-control">
+                        </div>
                         <span asp-validation-for="LastName" class="text-danger"></span>
+
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Dob" class="control-label"></label>
-                        <input asp-for="Dob" class="form-control" />
-                        <span asp-validation-for="Dob" class="text-danger"></span>
+                    <div class="row mb-3">
+                        <label asp-for="FirstName" class="col-sm-2 col-form-label">FirstName</label>
+                        <div class="col-sm-10">
+                            <input asp-for="FirstName" type="number" class="form-control">
+                        </div>
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="PhoneNumber" class="control-label"></label>
-                        <input asp-for="PhoneNumber" class="form-control" />
-                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="UserName" class="control-label"></label>
-                        <input asp-for="UserName" class="form-control" />
+                    <div class="row mb-3">
+                        <label asp-for="UserName" class="col-sm-2 col-form-label">UserName</label>
+                        <div class="col-sm-10">
+                            <input asp-for="UserName" type="text" class="form-control">
+                        </div>
                         <span asp-validation-for="UserName" class="text-danger"></span>
+
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
+                    <div class="row mb-3">
+                        <label asp-for="Email" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Email" type="text" class="form-control">
+                        </div>
+                        <span asp-validation-for="Email" class="text-danger"></span>
+
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="PhoneNumber" class="col-sm-2 col-form-label">PhoneNumber</label>
+                        <div class="col-sm-10">
+                            <input asp-for="PhoneNumber" type="text" class="form-control">
+                        </div>
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Dob" class="col-sm-2 col-form-label">Date of Birth</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Dob" type="datetime-local" class="form-control">
+                        </div>
+                        <span asp-validation-for="Dob" class="text-danger"></span>
+
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Password" class="col-sm-2 col-form-label">Password</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Password" type="password" class="form-control">
+                        </div>
                         <span asp-validation-for="Password" class="text-danger"></span>
+
                     </div>
-                    <div class="form-group">
-                        <label asp-for="ConfirmPassword" class="control-label"></label>
-                        <input asp-for="ConfirmPassword" class="form-control" />
+                    <div class="row mb-3">
+                        <label asp-for="ConfirmPassword" class="col-sm-2 col-form-label">ConfirmPassword</label>
+                        <div class="col-sm-10">
+                            <input asp-for="ConfirmPassword" type="ConfirmPassword" class="form-control">
+                        </div>
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+
                     </div>
+                   
+                    
                     <div class="form-group">
-                        <input type="submit" value="Lưu lại" class="btn btn-primary" />
+                        <input type="submit" value="Lưu lại" class="btn btn-outline-primary" />
                     </div>
                 </form>
             </div>
