External Login with facebook & google

--- a/eShopSolution/eShopSolution.AdminApp/Views/Ingredient/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Ingredient/Index.cshtml
@@ -14,10 +14,10 @@
     }, 2000);
 </script>
 <div class="container-fluid">
-    <h1 class="mt-4">Danh sách sản phẩm</h1>
+    <h1 class="mt-4">Danh sách nguyên liệu</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
-        <li class="breadcrumb-item active">Danh sách sản phẩm</li>
+        <li class="breadcrumb-item active">Danh sách nguyên liệu</li>
     </ol>
 <div class="card mb-12">
     <div class="card-header">
