--- a/eShopSolution/eShopSolution.AdminApp/Views/Ingredient/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Ingredient/Edit.cshtml
@@ -4,50 +4,62 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="container-fluid">
+    <h1 class="mt-4">Chỉnh sửa thông tin nguyên liệu</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+        <li class="breadcrumb-item">Nguyên liệu</li>
+        <li class="breadcrumb-item active">Chỉnh sửa thông tin nguyên liệu</li>
+    </ol>
+    <div class="card mb-4">
+        <div class="card-header">
+            <a class="btn btn-outline-success" asp-action="Index" asp-controller="Ingredient">Về danh sách</a>
+        </div>
 
-<h4>IngredienUpdateRequest</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+        <div class="card-body">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <input asp-for="Id" class="form-control" hidden> 
+
+                    <div class="row mb-3">
+                        <label asp-for="Name" class="col-sm-2 col-form-label">Name</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Name" type="text" class="form-control">
+                        </div>
+                        <span asp-validation-for="Name" class="text-danger"></span>
+
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Description" class="col-sm-2 col-form-label">Description</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Description" type="text" class="form-control">
+                        </div>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+
+                    </div>
+                    
+                    <div class="row mb-3">
+                        <label asp-for="Price" class="col-sm-2 col-form-label">Price</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Price" type="number" class="form-control">
+                        </div>
+                        <span asp-validation-for="Price" class="text-danger"></span>
+
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Stock" class="col-sm-2 col-form-label">Stock</label>
+                        <div class="col-sm-10">
+                            <input asp-for="Stock" type="number" class="form-control">
+                        </div>
+                        <span asp-validation-for="Stock" class="text-danger"></span>
+
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Lưu lại" class="btn btn-outline-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Stock" class="control-label"></label>
-                <input asp-for="Stock" class="form-control" />
-                <span asp-validation-for="Stock" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
