--- a/eShopSolution/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="index.html">
+                <a class="nav-link " asp-controller="Home" asp-action="Index">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
@@ -103,11 +103,11 @@
                             <i class="bi bi-circle"></i><span>Danh sách nguyên liệu</span>
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="tables-data.html">
                             <i class="bi bi-circle"></i><span>Data Tables</span>
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </li><!-- End Tables Nav -->
 
@@ -135,13 +135,13 @@
                 <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a href="https://sandbox.vnpayment.vn/merchantv2/Home/Dashboard.htm" target="_blank" id="myLink">
-                            <i class="bi bi-circle"></i><span>Thống kê hóa đơn</span>
+                            <i class="bi bi-circle"></i><span>Hóa đơn ví điện tử</span>
                         </a>
                     </li>
                     
                     <li>
                         <a href="charts-chartjs.html">
-                            <i class="bi bi-circle"></i><span>Chart.js</span>
+                            <i class="bi bi-circle"></i><span>Hóa đơn mua hàng</span>
                         </a>
                     </li>
                     <li>
@@ -264,10 +264,26 @@
        var count = localStorage.getItem('count') || 0; // Retrieve count from localStorage, or set it to 0 if not found
 
         connection.on("OrderCheckOut", (message) => {
-            console.log(message);
+            
             count = parseInt(count) + 1; // Increment count
             $(".badge.bg-primary").text(count);
+            $(".dropdown-header").text(`You have
+                        ${count} new notifications`);
             localStorage.setItem('count', count); // Save updated count to localStorage
+
+            var { userName, orderDate, ...rest } = message;
+            $('#notifications li.notification-item:first').remove();
+
+            var html = `<li class="notification-item">
+                                    <i class="bi bi-cart-check-fill text-success"></i>
+                                    <div>
+                                                <h4>${userName}</h4>
+                                        <p>Have checkout their cart</p>
+                                                <p>At ${orderDate}</p>
+                                    </div>
+                                </li>`
+            var fourthItem = $('#notifications li.notification-item:eq(0)');
+            fourthItem.before(html);
         });
 
         // Start the connection
@@ -281,7 +297,12 @@
                     'Error starting SignalR connection: ' + error
                 );
             });
+        // Remove count notifications
+        $(".nav-link").click(function (e) {
+            $(".badge.bg-primary").text("0");
+            localStorage.removeItem('count');
 
+        })
                     // Other SignalR code goes here
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
