--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
@@ -24,7 +24,7 @@
                     <div class="row mb-3">
                         <label asp-for="LastName" class="col-sm-2 col-form-label">LastName</label>
                         <div class="col-sm-10">
-                            <input asp-for="LastName" type="number" class="form-control">
+                            <input asp-for="LastName" type="text" class="form-control">
                         </div>
                         <span asp-validation-for="LastName" class="text-danger"></span>
 
@@ -32,7 +32,7 @@
                     <div class="row mb-3">
                         <label asp-for="FirstName" class="col-sm-2 col-form-label">FirstName</label>
                         <div class="col-sm-10">
-                            <input asp-for="FirstName" type="number" class="form-control">
+                            <input asp-for="FirstName" type="text" class="form-control">
                         </div>
                         <span asp-validation-for="FirstName" class="text-danger"></span>
 
