--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container-fluid">
-    <h1 class="mt-4">Tạo mới người dùng</h1>
+    <h1 class="mt-4">Chỉnh sửa thông tin người dùng</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
         <li class="breadcrumb-item">Người dùng</li>
