thêm chức năng dki 90%

--- a/FE/src/app/routes/account/account.component.less
+++ b/FE/src/app/routes/account/account.component.less
@@ -10,8 +10,11 @@
 }
 
 @media (min-width: 800px) {
-  .gradient-form {
+  .gradient-form-login {
     height: 90vh !important;
+  }
+  .gradient-form-register {
+    height: 135vh !important;
   }
 }
 @media (min-width: 769px) {
