--- a/FE/src/app/routes/account/account.component.html
+++ b/FE/src/app/routes/account/account.component.html
@@ -1,5 +1,5 @@
 <nz-spin [nzSpinning]="isLoading">
-  <section class="h-100 gradient-form" style="background-color: #eee;">
+  <section [ngClass]="isLogin ? 'gradient-form-login' : 'gradient-form-register'"  style="background-color: #eee;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-10">
@@ -7,63 +7,126 @@
             <div class="row g-0">
               <div class="col-lg-6">
                 <div class="card-body p-md-5 mx-md-4">
-
                   <ng-container *ngIf="isLogin">
                     <form nzLayout="vertical" nz-form [formGroup]="loginForm" class="login-form">
                       <nz-form-item>
-                        <nz-form-label [nzSpan]="12" nzFor="username">UserName</nz-form-label>
-                        <nz-form-control nzErrorTip="Please input your username!">
+                        <nz-form-label [nzSpan]="12" nzFor="username">Tên đăng nhập<span class="text-danger">*</span>
+                        </nz-form-label>
+                        <nz-form-control nzErrorTip="Tên đăng nhập không được để trống!">
                           <nz-input-group nzPrefixIcon="user">
-                            <input type="text" nz-input formControlName="username" placeholder="Nhập username" />
+                            <input type="text" nz-input formControlName="username" placeholder="Nhập tên đăng nhập"/>
                           </nz-input-group>
                         </nz-form-control>
                       </nz-form-item>
                       <nz-form-item>
-                        <nz-form-label [nzSpan]="12" nzFor="password">Password</nz-form-label>
-                        <nz-form-control nzErrorTip="Please input your Password!">
-                          <nz-input-group nzPrefixIcon="lock">
-                            <input type="password" nz-input formControlName="password" placeholder="Nhập password" />
+                        <nz-form-label [nzSpan]="12" nzFor="password">Mật khẩu<span class="text-danger">*</span>
+                        </nz-form-label>
+                        <nz-form-control nzErrorTip="Mật khẩu không được để trống!">
+                          <nz-input-group [nzSuffix]="eye" nzPrefixIcon="lock">
+                            <input [type]="isShowPassLogin ? 'text' : 'password'" nz-input formControlName="password" placeholder="Nhập mật khẩu"/>
                           </nz-input-group>
                         </nz-form-control>
                       </nz-form-item>
                       <nz-form-item>
-                        <label nz-checkbox [ngModelOptions]="{standalone: true}" [(ngModel)]="rememberMe">Remember me</label>
+                        <label nz-checkbox [ngModelOptions]="{standalone: true}" [(ngModel)]="rememberMe">Remember
+                          me</label>
                       </nz-form-item>
                       <div class="text-center pt-1 mb-5 pb-1">
-                        <button class="d-block w-100 btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" (click)="login()">Log
-                          in</button>
+                        <button class="d-block w-100 btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                type="button" (click)="login()">Đăng nhập
+                        </button>
                       </div>
 
                       <div class="d-flex align-items-center justify-content-center pb-4">
-                        <p class="mb-0 me-2">Don't have an account?</p>
-                        <button (click)="getSignIn()" type="button" class="m-auto btn btn-outline-danger">Create new</button>
+                        <p class="mb-0 me-2">Bạn chưa có tài khoản?</p>
+                        <button (click)="getSignIn()" type="button" class="m-auto btn btn-outline-danger">Tạo tài khoản
+                        </button>
                       </div>
 
                     </form>
                   </ng-container>
                   <ng-container *ngIf="!isLogin">
-                    <form>
-                      <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example11">Username</label>
-                        <input type="email" class="form-control"
-                               placeholder="Phone number or email address" />
-                      </div>
-
-                      <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example22">Password</label>
-                        <input type="password" class="form-control" />
-                      </div>
-                      <div class="form-outline mb-4">
-                        <label class="form-label" >Comfirm password</label>
-                        <input type="password" class="form-control" />
+                    <form nzLayout="vertical" nz-form [formGroup]="registerForm">
+                      <div nz-row>
+                        <div class="pr-1" nz-col nzSpan="12">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1" [nzSpan]="24">Tên<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control nzHasFeedback [nzSpan]="24" nzErrorTip="Tên không được để trống!">
+                              <input placeholder="Nhập tên" nz-input formControlName="firstName" required/>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div class="pl-1"  nz-col nzSpan="12">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1"  [nzSpan]="24">Họ<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control nzHasFeedback [nzSpan]="24" nzErrorTip="Họ không được để trống!">
+                              <input nz-input formControlName="lastName" placeholder="Nhập họ" required/>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1"  [nzSpan]="24">Ngày sinh<span class="text-danger">*</span></nz-form-label>
+                            <nz-date-picker formControlName="dob" nzPlaceHolder="yyyy/mm/dd"></nz-date-picker>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1"  [nzSpan]="24">Số điện thoại<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control nzHasFeedback [nzSpan]="24" nzErrorTip="Số điện thoại trống hoặc không hợp lệ!">
+                              <input nz-input formControlName="numberPhone" placeholder="Nhập số điện thoại" required/>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1"  [nzSpan]="24">Email<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control nzHasFeedback [nzSpan]="24" nzErrorTip="Email trống hoặc không hợp lệ!">
+                              <input nz-input formControlName="email" placeholder="Nhập email" required/>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1" [nzSpan]="24">Tên đăng nhập<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control nzHasFeedback [nzSpan]="24" nzErrorTip="Tên đăng nhập không được để trống!">
+                              <input nz-input formControlName="username" placeholder="Nhập tên đăng nhập" required/>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1" [nzSpan]="24">Mật khẩu<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control [nzSpan]="24" nzErrorTip="Mật khẩu trống hoặc không đúng định dạng!">
+                              <nz-input-group [nzSuffix]="eye1">
+                              <input [type]="isShowPassRegistry ? 'text' : 'password'" nz-input formControlName="password" placeholder="Nhập mật khẩu" required/>
+                              </nz-input-group>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+                        <div nz-col nzSpan="24">
+                          <nz-form-item>
+                            <nz-form-label class="pb-1" [nzSpan]="24">Nhập lại mật khẩu<span class="text-danger">*</span></nz-form-label>
+                            <nz-form-control [nzSpan]="24" nzErrorTip="Mật khẩu nhập lại không được để trống!">
+                              <nz-input-group [nzSuffix]="eye2">
+                              <input [type]="isShowRePassRegistry ? 'text' : 'password'" nz-input formControlName="rePassword" placeholder="Nhập lại mật khẩu" required/>
+                              </nz-input-group>
+                              <span class="text-danger" *ngIf="registerForm.hasError('passwordnotmatch') && registerForm.get('rePassword')!.touched"><span nz-icon nzType="warning" nzTheme="outline"></span> Mật khẩu nhập lại không khớp</span>
+                            </nz-form-control>
+                          </nz-form-item>
+                          <i class="fw-bold">Tip: Mật khẩu tối thiểu tám ký tự, ít nhất một chữ cái viết hoa, một chữ cái viết thường, một số và một ký tự đặc biệt</i>
+                        </div>
                       </div>
 
                       <div class="text-center pt-1 mb-5 pb-1">
-                        <button class="d-block w-100 btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Sign Up</button>
+                        <button class="d-block w-100 btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                type="button" (click)="signUp()">Sign Up
+                        </button>
                       </div>
                       <div class="d-flex align-items-center justify-content-center pb-4">
-                        <p class="mb-0 me-2">Have an account?</p>
-                        <button (click)="getSignIn()" type="button" class="m-auto btn btn-outline-danger">Login Now</button>
+                        <p class="mb-0 me-2">Bạn đã có tài khoản?</p>
+                        <button (click)="getSignIn()" type="button" class="m-auto btn btn-outline-danger">Đăng nhập
+                        </button>
                       </div>
                     </form>
                   </ng-container>
@@ -85,3 +148,12 @@
     </div>
   </section>
 </nz-spin>
+<ng-template #eye>
+  <span (click)="isShowPassLogin = !isShowPassLogin" nz-icon nzType="eye" nzTheme="outline"></span>
+</ng-template>
+<ng-template #eye1>
+  <span (click)="isShowPassRegistry = !isShowPassRegistry" nz-icon nzType="eye" nzTheme="outline"></span>
+</ng-template>
+<ng-template #eye2>
+  <span (click)="isShowRePassRegistry = !isShowRePassRegistry" nz-icon nzType="eye" nzTheme="outline"></span>
+</ng-template>
